<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/icons8_activity_feed_24px_2"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_activities"
        android:icon="@drawable/icons8_kicking_24px"
        android:title="@string/title_activities" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/icons8_plus_24px"
        android:title="@string/title_create" />
    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/icons8_star_filled_24px"
        android:title="@string/title_favourite"

        />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icons8_user_24px"
        android:title="@string/title_profile" />

</menu>
