<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
   >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frag_create"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".create_eventFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createEventImage"
        android:layout_centerHorizontal="true"
android:layout_marginTop="20dp"
        android:text="@string/please_choose_photo_tips" />

    <TextView
        android:id="@+id/titleNewEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:textSize="55px"
        android:layout_centerHorizontal="true"
        android:text="@string/new_event"
        android:textColor="@color/notSoBlack"
        android:textStyle="bold"
        />

    <ImageButton
        android:id="@+id/createEventImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/captionEvent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="35dp"
        android:tooltipText="@string/event_tips_text"
        app:srcCompat="@drawable/icons8_add_new_104px" />
    <EditText
        android:id="@+id/eventName"
        android:layout_below="@+id/locationEventSpinner"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/please_enter_event"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="15sp"
        />
    <EditText
        android:id="@+id/eventDate"
        android:layout_below="@+id/eventName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/select_date"
        android:inputType="textShortMessage"
        android:padding="10dp"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/eventStartTime"
        android:layout_below="@+id/eventDate"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/select_start_time"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/eventEndTime"
        android:layout_below="@+id/eventStartTime"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/select_end_time"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/captionEvent"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventEndTime"
        android:layout_marginStart="50dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/caption_hint"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="15sp" />

    <Button

        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/post"
        android:textColor="@color/pureWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:autofillHints="@string/choose_location"
        android:id="@+id/locationEventSpinner"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@+id/titleNewEvent"
        android:prompt="@string/location"
        android:entries="@array/location"

        android:layout_marginStart="45dp"
        android:layout_marginTop="43dp"

        android:layout_marginBottom="-4dp" />


</RelativeLayout>
</ScrollView>