<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="302dp"
        android:layout_marginBottom="489dp"
        android:contentDescription="@string/back"
        app:srcCompat="@drawable/back"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/help"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="158dp"
        android:layout_marginTop="71dp"
        android:text="@string/help"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="177dp"
        android:text="@string/help_text"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_below="@+id/help_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="241dp"
        android:text="@string/phone"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="1dp"
        android:layout_toEndOf="@+id/email"
        android:text="@string/email_text"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="175dp"
        android:layout_height="22dp"
        android:layout_below="@+id/email_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="241dp"
        android:layout_toEndOf="@+id/phone"
        android:textSize="18dp"
        android:text="@string/phone_text" />


</RelativeLayout>