<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/setting_pic"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/setting_big" />

    <TextView
        android:id="@+id/setting"
        android:layout_width="128dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="88dp"
        android:text="@string/setting"
        android:textSize="30dp" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="182dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="199dp"
        android:layout_marginEnd="104dp"
        android:onClick="change_password"
        android:text="@string/change_password" />

    <Button
        android:id="@+id/help"
        android:layout_width="182dp"
        android:layout_height="60dp"
        android:layout_below="@+id/change_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="94dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="101dp"
        android:text="@string/help" />

    <Button
        android:id="@+id/privacy"
        android:layout_width="182dp"
        android:layout_height="60dp"
        android:layout_below="@+id/help"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:text="@string/privacy" />

    <Button
        android:id="@+id/logout"
        android:layout_width="182dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="60dp"
        android:text="@string/logout_text"
        android:textColor="@color/red"/>

</RelativeLayout>