<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="291dp"
        android:layout_marginBottom="474dp"
        app:srcCompat="@drawable/back"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="150dp"
        android:text="@string/old_password" />

    <TextView
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/old_password"
        android:layout_alignStart="@+id/old_password"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="46dp"
        android:text="@string/new_password" />

    <TextView
        android:id="@+id/retype_password"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@+id/new_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="266dp"
        android:text="@string/retype_password" />


    <EditText
        android:id="@+id/new_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="34dp"
        android:layout_toEndOf="@+id/new_password"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/new_password_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="240dp" />
        <!--app:layout_constraintStart_toEndOf="@+id/new_password_input"-->


    <EditText
        android:id="@+id/retype_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="17dp"
        android:layout_toEndOf="@+id/retype_password"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/retype_password_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="240dp" />
        <!--app:layout_constraintStart_toEndOf="@+id/retype_password_input"-->


    <EditText
        android:id="@+id/old_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="34dp"
        android:layout_toEndOf="@+id/old_password"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/old_password_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="240dp" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="252dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="164dp"
        android:text="@string/confirm" />
    <!--app:layout_constraintStart_toEndOf="@+id/old_password_input"-->

</RelativeLayout>