<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_margin="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:background="@color/pureWhite"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:padding="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/feedProfileImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/user36px"
                android:scaleType="centerCrop"
                android:layout_marginLeft="4dp"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/feedUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp"
                    android:padding="2dp">
                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/updatedPost"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/feedDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/feedTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/feedDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postDescription"
            android:textColor="@android:color/black"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:padding="3dp"
            android:textSize="14sp"/>

        <ImageView
            android:id="@+id/feedImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="3dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />
    </LinearLayout>

</RelativeLayout>