<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/user_prof"
        android:layout_width="149dp"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/user_prof"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        app:srcCompat="@drawable/user_profile" />

    <TextView
        android:id="@+id/username"
        android:layout_width="81dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="178dp"
        android:text="@string/username"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="195dp" />

    <TextView
        android:id="@+id/ic"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="236dp"
        android:text="@string/ic"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="250dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="35dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="250dp" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/name"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="37dp"
        android:layout_toEndOf="@+id/email"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/email"
        android:ems="10"
        android:hint="@string/email_test"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="37dp"
        android:layout_toEndOf="@+id/username"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/user36px"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="189dp" />

    <EditText
        android:id="@+id/ic_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/loginEmail"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="37dp"
        android:layout_toEndOf="@+id/ic"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/ic_text"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toEndOf="@+id/ic"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="240dp" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="302dp"
        android:layout_marginBottom="489dp"
        android:contentDescription="@string/back"
        app:srcCompat="@drawable/back"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="252dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="164dp"
        android:text="@string/confirm" />

</RelativeLayout>